--- a/vignettes/controller.qmd
+++ b/vignettes/controller.qmd
@@ -21,7 +21,11 @@ We use the random search example from the [Rush article](rush.html) to demonstra
 ```{r controller-002}
 library(rush)
 
-wl_random_search = function(rush) {
+branin = function(x1, x2) {
+  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
+}
+
+wl_random_search = function(rush, branin) {
   while(rush$n_finished_tasks < 100) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
@@ -44,13 +48,14 @@ Local workers run on the same machine as the controller, whereas remote workers 
 The `$start_local_workers()` method initiates local workers using the `processx` package.
 The `n_workers` parameter specifies the number of workers to launch.
 The `worker_loop` parameter defines the function executed by each worker.
-If the `worker_loop` function depends on global variables, these can be provided via the `globals` parameter.
+If the `worker_loop` function depends on additional objects, these can be passed as arguments to `worker_loop`.
 Required packages for the `worker_loop` can be specified using the `packages` parameter.
 
 ```{r controller-003}
 worker_ids = rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 4)
+  n_workers = 4,
+  branin = branin)
 ```
 
 Worker information is accessible through the `$worker_info` method.
@@ -75,7 +80,8 @@ Additional workers may be added to the network at any time.
 ```{r controller-006}
 rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 2)
+  n_workers = 2,
+  branin = branin)
 ```
 
 ```{r controller-007}
@@ -98,17 +104,16 @@ This function allows explicit specification of the number of workers, the type o
 rush_plan(n_workers = 4, config = redux::redis_config(), worker_type = "local")
 ```
 
-## Globals {#sec-local-globals}
+## Passing data to workers {#sec-local-globals}
 
-Global variables are those defined in the global environment that must also be accessible to workers.
-They are specified by name in the `$start_local_workers()` method.
-These variables are serialized and stored in the Redis database.
-Upon initialization, each worker retrieves the serialized globals from the database and assigns them to its own global environment.
+Objects required by the worker loop can be passed as arguments to `$start_local_workers()` / `$start_remote_workers()`.
+These arguments are serialized and stored in the Redis database as part of the worker configuration.
+Upon initialization, each worker retrieves and unserializes the worker configuration before invoking the worker loop.
 
 ::: {.callout-note}
 
 The maximum size of a Redis string is 512 MiB.
-If the serialized globals required by the worker loop exceed this limit, Rush will raise an error.
+If the serialized worker configuration exceeds this limit, Rush will raise an error.
 In scenarios where both the controller and the workers have access to a shared file system, Rush will instead write large objects to disk.
 The `large_objects_path` argument of `rush_plan()` specifies the directory used for storing such large objects.
 
@@ -147,7 +152,7 @@ The worker loop must implement the `rush$terminated` flag.
 Then the rush controller can terminate the optimization.
 
 ```{r controller-014}
-wl_random_search = function(rush) {
+wl_random_search = function(rush, branin) {
   while(!rush$terminated) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
@@ -164,7 +169,8 @@ rush = rsh(
 
 rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 2)
+  n_workers = 2,
+  branin = branin)
 ```
 
 ```{r controller-015}
@@ -347,7 +353,7 @@ daemons(
 We define a worker loop.
 
 ```{r controller-036}
-wl_random_search = function(rush) {
+wl_random_search = function(rush, branin) {
   while(rush$n_finished_tasks < 100) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
@@ -388,7 +394,8 @@ After the daemons are started, we can start the remote workers.
 ```{r controller-040}
 worker_ids = rush$start_remote_workers(
   worker_loop = wl_random_search,
-  n_workers = 2)
+  n_workers = 2,
+  branin = branin)
 ```
 
 ```{r controller-041}
