--- a/vignettes/controller.qmd
+++ b/vignettes/controller.qmd
@@ -21,12 +21,8 @@ We use the random search example from the [Rush article](rush.html) to demonstra
 ```{r controller-002}
 library(rush)
 
-branin = function(x1, x2) {
-  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
-}
-
 wl_random_search = function(rush, branin) {
-  while(rush$n_finished_tasks < 100) {
+  while(TRUE) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
     key = rush$push_running_tasks(xss = list(xs))
@@ -54,8 +50,8 @@ Required packages for the `worker_loop` can be specified using the `packages` pa
 ```{r controller-003}
 worker_ids = rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 4,
-  branin = branin)
+  branin = bbotk::branin,
+  n_workers = 2)
 ```
 
 Worker information is accessible through the `$worker_info` method.
@@ -80,8 +76,8 @@ Additional workers may be added to the network at any time.
 ```{r controller-006}
 rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 2,
-  branin = branin)
+  branin = bbotk::branin,
+  n_workers = 2)
 ```
 
 ```{r controller-007}
@@ -101,7 +97,7 @@ This function allows explicit specification of the number of workers, the type o
 
 ```{r controller-009}
 #| eval: false
-rush_plan(n_workers = 4, config = redux::redis_config(), worker_type = "local")
+rush_plan(n_workers = 2, config = redux::redis_config(), worker_type = "local")
 ```
 
 ## Passing data to workers {#sec-local-globals}
@@ -146,8 +142,8 @@ To stop all workers and reset the network, the `$reset()` method is used.
 rush$reset()
 ```
 
-In the preceding example, the optimization process was stopped after 100 iterations.
-Alternatively, it is possible to terminate the optimization by sending a terminate signal.
+Instead of killing the worker processes, it is also possible to send a terminate signal to the worker.
+The worker then terminates after it has finished the current task.
 The worker loop must implement the `rush$terminated` flag.
 Then the rush controller can terminate the optimization.
 
@@ -170,7 +166,7 @@ rush = rsh(
 rush$start_local_workers(
   worker_loop = wl_random_search,
   n_workers = 2,
-  branin = branin)
+  branin = bbotk::branin)
 ```
 
 ```{r controller-015}
@@ -354,7 +350,7 @@ We define a worker loop.
 
 ```{r controller-036}
 wl_random_search = function(rush, branin) {
-  while(rush$n_finished_tasks < 100) {
+  while(TRUE) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
     key = rush$push_running_tasks(xss = list(xs))
@@ -369,18 +365,9 @@ rush = rsh(
   config = redux::redis_config())
 ```
 
-First we stop all previously started daemons with`daemons(0)`.
-Then we start two new daemons.
+We start two new daemons.
 
 ```{r controller-037}
-#| include: false
-daemons(0)
-daemons(2)
-```
-
-```{r controller-038}
-#| eval: false
-daemons(0)
 daemons(2)
 ```
 
@@ -395,7 +382,7 @@ After the daemons are started, we can start the remote workers.
 worker_ids = rush$start_remote_workers(
   worker_loop = wl_random_search,
   n_workers = 2,
-  branin = branin)
+  branin = bbotk::branin)
 ```
 
 ```{r controller-041}
@@ -405,6 +392,12 @@ Sys.sleep(1)
 
 ```{r controller-042}
 rush$worker_info
+```
+
+We stop the daemons.
+
+```{r controller-043}
+rush$reset()
 ```
 
 ## Failed Workers {#sec-remote-failed-workers}
@@ -422,14 +415,6 @@ wl_failed_worker = function(rush) {
 
 Start two new daemons.
 ```{r controller-044}
-#| include: false
-daemons(0)
-daemons(2)
-```
-
-```{r controller-045}
-#| eval: false
-daemons(0)
 daemons(2)
 ```
 
@@ -454,14 +439,6 @@ A segmentation fault also terminates the associated `mirai` daemon.
 Therefore, it is necessary to restart the daemon before restarting the workers.
 
 ```{r controller-049}
-#| include: false
-daemons(0)
-daemons(2)
-```
-
-```{r controller-050}
-#| eval: false
-daemons(0)
 daemons(2)
 ```
 
