--- a/vignettes/controller.qmd
+++ b/vignettes/controller.qmd
@@ -35,6 +35,11 @@ wl_random_search = function(rush, branin) {
 rush = rsh(
   network = "test-network",
   config = redux::redis_config())
+
+branin = function(x1, x2) {
+  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
+}
+
 ```
 
 ## Start Workers {#sec-local-start-workers}
@@ -50,7 +55,7 @@ Required packages for the `worker_loop` can be specified using the `packages` pa
 ```{r controller-003}
 worker_ids = rush$start_local_workers(
   worker_loop = wl_random_search,
-  branin = bbotk::branin,
+  branin = branin,
   n_workers = 2)
 ```
 
@@ -76,7 +81,7 @@ Additional workers may be added to the network at any time.
 ```{r controller-006}
 rush$start_local_workers(
   worker_loop = wl_random_search,
-  branin = bbotk::branin,
+  branin = branin,
   n_workers = 2)
 ```
 
@@ -88,3 +93,411 @@ Sys.sleep(1)
 ```{r controller-008}
 rush$worker_info
 ```
+
+
+
+## Rush Plan {#sec-local-rush-plan}
+
+When `rush` is integrated into a third-party package, the starting of workers is typically managed by the package itself.
+In such cases, users may configure worker options by invoking the `rush_plan()` function.
+This function allows explicit specification of the number of workers, the type of workers, and the configuration for connecting to the Redis database.
+
+```{r controller-009}
+#| eval: false
+rush_plan(n_workers = 2, config = redux::redis_config(), worker_type = "local")
+```
+
+## Passing data to workers {#sec-local-globals}
+
+Objects required by the worker loop can be passed as arguments to `$start_local_workers()` / `$start_remote_workers()`.
+These arguments are serialized and stored in the Redis database as part of the worker configuration.
+Upon initialization, each worker retrieves and unserializes the worker configuration before invoking the worker loop.
+
+::: {.callout-note}
+
+The maximum size of a Redis string is 512 MiB.
+If the serialized worker configuration exceeds this limit, Rush will raise an error.
+In scenarios where both the controller and the workers have access to a shared file system, Rush will instead write large objects to disk.
+The `large_objects_path` argument of `rush_plan()` specifies the directory used for storing such large objects.
+
+:::
+
+
+## Stop Worker {#sec-local-stop-worker}
+
+Workers can be stopped individually or all at once.
+To terminate a specific worker, the `$stop_workers()` method is invoked with the corresponding `worker_ids` argument.
+
+```{r controller-010}
+rush$stop_workers(worker_ids = worker_ids[1])
+```
+
+This command terminates the selected worker process.
+
+```{r controller-011}
+#| include: false
+Sys.sleep(1)
+```
+
+```{r controller-012}
+rush$worker_info
+```
+
+To stop all workers and reset the network, the `$reset()` method is used.
+
+```{r controller-013}
+rush$reset()
+```
+
+Instead of killing the worker processes, it is also possible to send a terminate signal to the worker.
+The worker then terminates after it has finished the current task.
+The worker loop must implement the `rush$terminated` flag.
+Then the rush controller can terminate the optimization.
+
+```{r controller-014}
+wl_random_search = function(rush, branin) {
+  while(!rush$terminated) {
+
+    xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
+    key = rush$push_running_tasks(xss = list(xs))
+
+    ys = list(y = branin(xs$x1, xs$x2))
+    rush$push_results(key, yss = list(ys))
+  }
+}
+
+rush = rsh(
+  network = "test-random-search-terminate",
+  config = redux::redis_config())
+
+rush$start_local_workers(
+  worker_loop = wl_random_search,
+  n_workers = 2,
+  branin = branin)
+```
+
+```{r controller-015}
+#| include: false
+Sys.sleep(1)
+```
+
+The random search proceeds as usual.
+
+```{r controller-016}
+
+rush$fetch_finished_tasks()
+```
+
+To terminate the optimization, the following command is used.
+
+```{r controller-017}
+rush$stop_workers(type = "terminate")
+```
+
+The workers are terminated.
+
+```{r controller-018}
+#| include: false
+Sys.sleep(1)
+```
+
+```{r controller-019}
+rush$worker_info
+```
+
+## Failed Workers {#sec-local-failed-workers}
+
+We simulate a segfault on the worker by killing the worker process.
+
+```{r controller-020}
+rush = rsh(network = "test-failed-workers")
+
+wl_failed_worker = function(rush) {
+  tools::pskill(Sys.getpid(), tools::SIGKILL)
+}
+```
+
+Workers are then started using the faulty worker loop.
+
+```{r controller-021}
+worker_ids =  rush$start_local_workers(
+  worker_loop = wl_failed_worker,
+  n_workers = 2)
+```
+
+```{r controller-022}
+#| include: false
+Sys.sleep(1)
+```
+
+The `$detect_lost_workers()` method is used to identify failed workers.
+When a worker is detected, its state is updated to `"lost"`.
+
+```{r controller-023}
+rush$detect_lost_workers()
+rush$worker_info
+```
+
+## Restart Workers {#sec-local-restart-workers}
+
+Workers that have failed can be restarted using the `$restart_workers()` method.
+This method accepts the `worker_ids` of the workers to be restarted.
+
+```{r controller-024}
+rush$restart_workers(worker_ids = worker_ids[1])
+```
+
+```{r controller-025}
+#| include: false
+Sys.sleep(1)
+```
+
+The first worker is restarted and its state is updated to `"running"`.
+
+```{r controller-026}
+rush$worker_info
+```
+
+## Log Messages {#sec-local-log-messages}
+
+Workers record all messages generated using the `lgr` package to the database.
+The `lgr_thresholds` argument of `$start_local_workers()` specifies the logging level for each logger, e.g. `c("mlr3/rush" = "debug")`.
+While enabling log message storage introduces a minor performance overhead, it is valuable for debugging purposes.
+By default, log messages are not stored.
+To enable logging, workers are started with the desired logging threshold.
+
+```{r controller-027}
+rush = rsh(network = "test-log-messages")
+
+wl_log_message = function(rush) {
+  lg = lgr::get_logger("mlr3/rush")
+  lg$info("This is an info message from worker %s", rush$worker_id)
+}
+
+rush$start_local_workers(
+  worker_loop = wl_log_message,
+  n_workers = 2,
+  lgr_thresholds = c(rush = "info"))
+```
+
+```{r controller-028}
+#| include: false
+Sys.sleep(1)
+```
+
+The most recent log messages can be printed as follows.
+
+```{r controller-029}
+Sys.sleep(1)
+rush$print_log()
+```
+
+To retrieve all log entries, use the `$read_log()` method.
+
+```{r controller-030}
+rush$read_log()
+```
+
+We reset the network.
+
+```{r controller-031}
+rush$reset()
+```
+
+# Remote Workers {#sec-remote-workers}
+
+The `mirai` package provides a straightforward mechanism for launching `rush` workers on remote machines.
+`mirai` manages daemons, which are persistent background processes capable of executing arbitrary R code in parallel.
+These daemons communicate with the main session.
+
+```{r controller-032}
+library(mirai)
+```
+
+## Start Workers {#sec-remote-start-workers}
+
+Usually `mirai` is used to start daemons on remote machines but it can also be used to start local daemons.
+
+```{r controller-033}
+#| eval: false
+daemons(
+  n = 2,
+  url = host_url()
+)
+```
+
+Daemons may also be launched on a remote machine via SSH.
+
+```{r controller-034}
+#| eval: false
+daemons(
+  n = 2L,
+  url = host_url(port = 5555),
+  remote = ssh_config(remotes = "ssh://10.75.32.90")
+)
+```
+
+On high performance computing clusters, daemons can be started using a scheduler.
+
+```{r controller-035}
+#| eval: false
+daemons(
+  n = 2L,
+  url = host_url(),
+  remote = remote_config(
+    command = "sbatch",
+    args = c("--mem 512", "-n 1", "--wrap", "."),
+    rscript = file.path(R.home("bin"), "Rscript"),
+    quote = TRUE
+  )
+)
+```
+
+We define a worker loop.
+
+```{r controller-036}
+wl_random_search = function(rush, branin) {
+  while(TRUE) {
+
+    xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
+    key = rush$push_running_tasks(xss = list(xs))
+
+    ys = list(y = branin(xs$x1, xs$x2))
+    rush$push_results(key, yss = list(ys))
+  }
+}
+
+rush = rsh(
+  network = "test-network",
+  config = redux::redis_config())
+```
+
+We start two new daemons.
+
+```{r controller-037}
+daemons(2)
+```
+
+```{r controller-039}
+#| include: false
+Sys.sleep(1)
+```
+
+After the daemons are started, we can start the remote workers.
+
+```{r controller-040}
+worker_ids = rush$start_remote_workers(
+  worker_loop = wl_random_search,
+  n_workers = 2,
+  branin = branin)
+```
+
+```{r controller-041}
+#| include: false
+Sys.sleep(1)
+```
+
+```{r controller-042}
+rush$worker_info
+```
+
+We stop the daemons.
+
+```{r controller-043a}
+rush$reset()
+```
+
+## Failed Workers {#sec-remote-failed-workers}
+
+Failed workers started with `mirai` are also detected by the controller.
+We simulate a segfault on the worker by killing the worker process.
+
+```{r controller-043}
+rush = rsh(network = "test-failed-mirai-workers")
+
+wl_failed_worker = function(rush) {
+  tools::pskill(Sys.getpid(), tools::SIGKILL)
+}
+```
+
+Start two new daemons.
+```{r controller-044}
+daemons(2)
+```
+
+Start two remote workers.
+
+```{r controller-046}
+worker_ids = rush$start_remote_workers(
+  worker_loop = wl_failed_worker,
+  n_workers = 2)
+```
+
+```{r controller-047}
+#| include: false
+Sys.sleep(1)
+```
+
+```{r controller-048}
+rush$detect_lost_workers()
+```
+
+A segmentation fault also terminates the associated `mirai` daemon.
+Therefore, it is necessary to restart the daemon before restarting the workers.
+
+```{r controller-049}
+daemons(2)
+```
+
+```{r controller-051}
+#| include: false
+Sys.sleep(1)
+```
+
+Workers can then be restarted using the `$restart_workers()` method.
+
+```{r controller-052}
+rush$restart_workers(worker_ids)
+```
+
+# Script Workers {#sec-script-workers}
+
+The most flexible method for starting workers is to use a script generated with the `$worker_script()` method.
+This script can be executed either on the local machine or on a remote machine.
+The only requirement is that the machine is capable of running R scripts and has access to the Redis database.
+
+```{r controller-053}
+rush = rsh(
+  network = "test-script-workers",
+  config = redux::redis_config())
+
+rush$worker_script(
+  worker_loop = wl_random_search)
+```
+
+## Error Handling {#sec-script-error-handling}
+
+Workers started with `processx` or `mirai` are monitored by these packages.
+The heartbeat is a mechanism to monitor the status of script workers.
+The mechanism consists of a heartbeat key with a set [expiration timeout](https://redis.io/commands/expire/) and a dedicated heartbeat process that refreshes the timeout periodically.
+The heartbeat process is started with `callr` and is linked to the main process of the worker.
+In the event of a worker's failure, the associated heartbeat process also ceases to function, thus halting the renewal of the timeout.
+The absence of the heartbeat key acts as an indicator to the controller that the worker is no longer operational.
+Consequently, the controller updates the worker's status to `"lost"`.
+
+Heartbeats are initiated upon worker startup by specifying the `heartbeat_period` and `heartbeat_expire` parameters.
+The `heartbeat_period` defines the frequency at which the heartbeat process will update the timeout.
+The `heartbeat_expire` sets the duration, in seconds, before the heartbeat key expires.
+The expiration time should be set to a value greater than the heartbeat period to ensure that the heartbeat process has sufficient time to refresh the timeout.
+
+```{r controller-054}
+rush$worker_script(
+  worker_loop = wl_random_search,
+  heartbeat_period = 1,
+  heartbeat_expire = 3)
+```
+
+The heartbeat process is also the only way to kill a script worker.
+The `$stop_workers(type = "kill")` method pushes a kill signal to the heartbeat process.
+The heartbeat process terminates the main process of the worker.
+
