--- a/vignettes/controller.qmd
+++ b/vignettes/controller.qmd
@@ -21,8 +21,8 @@ We use the random search example from the [Rush article](rush.html) to demonstra
 ```{r controller-002}
 library(rush)
 
-wl_random_search = function(rush) {
-  while(rush$n_finished_tasks < 100) {
+wl_random_search = function(rush, branin) {
+  while(TRUE) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
     key = rush$push_running_tasks(xss = list(xs))
@@ -35,6 +35,11 @@ wl_random_search = function(rush) {
 rush = rsh(
   network = "test-network",
   config = redux::redis_config())
+
+branin = function(x1, x2) {
+  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
+}
+
 ```
 
 ## Start Workers {#sec-local-start-workers}
@@ -44,13 +49,14 @@ Local workers run on the same machine as the controller, whereas remote workers 
 The `$start_local_workers()` method initiates local workers using the `processx` package.
 The `n_workers` parameter specifies the number of workers to launch.
 The `worker_loop` parameter defines the function executed by each worker.
-If the `worker_loop` function depends on global variables, these can be provided via the `globals` parameter.
+If the `worker_loop` function depends on additional objects, these can be passed as arguments to `worker_loop`.
 Required packages for the `worker_loop` can be specified using the `packages` parameter.
 
 ```{r controller-003}
 worker_ids = rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 4)
+  branin = branin,
+  n_workers = 2)
 ```
 
 Worker information is accessible through the `$worker_info` method.
@@ -75,6 +81,7 @@ Additional workers may be added to the network at any time.
 ```{r controller-006}
 rush$start_local_workers(
   worker_loop = wl_random_search,
+  branin = branin,
   n_workers = 2)
 ```
 
@@ -87,6 +94,8 @@ Sys.sleep(1)
 rush$worker_info
 ```
 
+
+
 ## Rush Plan {#sec-local-rush-plan}
 
 When `rush` is integrated into a third-party package, the starting of workers is typically managed by the package itself.
@@ -95,20 +104,19 @@ This function allows explicit specification of the number of workers, the type o
 
 ```{r controller-009}
 #| eval: false
-rush_plan(n_workers = 4, config = redux::redis_config(), worker_type = "local")
+rush_plan(n_workers = 2, config = redux::redis_config(), worker_type = "local")
 ```
 
-## Globals {#sec-local-globals}
+## Passing data to workers {#sec-local-globals}
 
-Global variables are those defined in the global environment that must also be accessible to workers.
-They are specified by name in the `$start_local_workers()` method.
-These variables are serialized and stored in the Redis database.
-Upon initialization, each worker retrieves the serialized globals from the database and assigns them to its own global environment.
+Objects required by the worker loop can be passed as arguments to `$start_local_workers()` / `$start_remote_workers()`.
+These arguments are serialized and stored in the Redis database as part of the worker configuration.
+Upon initialization, each worker retrieves and unserializes the worker configuration before invoking the worker loop.
 
 ::: {.callout-note}
 
 The maximum size of a Redis string is 512 MiB.
-If the serialized globals required by the worker loop exceed this limit, Rush will raise an error.
+If the serialized worker configuration exceeds this limit, Rush will raise an error.
 In scenarios where both the controller and the workers have access to a shared file system, Rush will instead write large objects to disk.
 The `large_objects_path` argument of `rush_plan()` specifies the directory used for storing such large objects.
 
@@ -141,13 +149,13 @@ To stop all workers and reset the network, the `$reset()` method is used.
 rush$reset()
 ```
 
-In the preceding example, the optimization process was stopped after 100 iterations.
-Alternatively, it is possible to terminate the optimization by sending a terminate signal.
+Instead of killing the worker processes, it is also possible to send a terminate signal to the worker.
+The worker then terminates after it has finished the current task.
 The worker loop must implement the `rush$terminated` flag.
 Then the rush controller can terminate the optimization.
 
 ```{r controller-014}
-wl_random_search = function(rush) {
+wl_random_search = function(rush, branin) {
   while(!rush$terminated) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
@@ -164,7 +172,8 @@ rush = rsh(
 
 rush$start_local_workers(
   worker_loop = wl_random_search,
-  n_workers = 2)
+  n_workers = 2,
+  branin = branin)
 ```
 
 ```{r controller-015}
@@ -347,8 +356,8 @@ daemons(
 We define a worker loop.
 
 ```{r controller-036}
-wl_random_search = function(rush) {
-  while(rush$n_finished_tasks < 100) {
+wl_random_search = function(rush, branin) {
+  while(TRUE) {
 
     xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
     key = rush$push_running_tasks(xss = list(xs))
@@ -363,18 +372,9 @@ rush = rsh(
   config = redux::redis_config())
 ```
 
-First we stop all previously started daemons with`daemons(0)`.
-Then we start two new daemons.
+We start two new daemons.
 
 ```{r controller-037}
-#| include: false
-daemons(0)
-daemons(2)
-```
-
-```{r controller-038}
-#| eval: false
-daemons(0)
 daemons(2)
 ```
 
@@ -388,7 +388,8 @@ After the daemons are started, we can start the remote workers.
 ```{r controller-040}
 worker_ids = rush$start_remote_workers(
   worker_loop = wl_random_search,
-  n_workers = 2)
+  n_workers = 2,
+  branin = branin)
 ```
 
 ```{r controller-041}
@@ -398,6 +399,12 @@ Sys.sleep(1)
 
 ```{r controller-042}
 rush$worker_info
+```
+
+We stop the daemons.
+
+```{r controller-043a}
+rush$reset()
 ```
 
 ## Failed Workers {#sec-remote-failed-workers}
@@ -415,14 +422,6 @@ wl_failed_worker = function(rush) {
 
 Start two new daemons.
 ```{r controller-044}
-#| include: false
-daemons(0)
-daemons(2)
-```
-
-```{r controller-045}
-#| eval: false
-daemons(0)
 daemons(2)
 ```
 
@@ -447,14 +446,6 @@ A segmentation fault also terminates the associated `mirai` daemon.
 Therefore, it is necessary to restart the daemon before restarting the workers.
 
 ```{r controller-049}
-#| include: false
-daemons(0)
-daemons(2)
-```
-
-```{r controller-050}
-#| eval: false
-daemons(0)
 daemons(2)
 ```
 
