--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -50,6 +50,31 @@
   urldate = {2025-12-14}
 }
 
+@misc{gao2025,
+  title = {R-Lib/Mirai: Mirai 2.3.0},
+  shorttitle = {R-Lib/Mirai},
+  author = {Gao, Charlie},
+  year = 2025,
+  month = may,
+  doi = {10.5281/zenodo.15492960},
+  urldate = {2025-06-21},
+  howpublished = {Zenodo}
+}
+
+@incollection{ginsbourger2010,
+  title = {Kriging {{Is Well-Suited}} to {{Parallelize Optimization}}},
+  booktitle = {Computational {{Intelligence}} in {{Expensive Optimization Problems}}},
+  author = {Ginsbourger, David and Le Riche, Rodolphe and Carraro, Laurent},
+  editor = {Tenne, Yoel and Goh, Chi-Keong},
+  year = 2010,
+  pages = {131--162},
+  publisher = {Springer},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-10701-6_6},
+  urldate = {2025-06-13},
+  langid = {english}
+}
+
 @inproceedings{li2014,
   title = {Scaling {{Distributed Machine Learning}} with the {{Parameter Server}}},
   booktitle = {Proceedings of the 2014 {{International Conference}} on {{Big Data Science}} and {{Computing}}},
